# subgraph-query-to-csv

./: .gitignore  pyproject.toml
output/: celo_projects.csv  celo_retirements.csv  celo_tco2Tokens.csv  polygon_projects.csv  polygon_retirements.csv  polygon_tco2Tokens.csv
subgraph_query_to_csv/: main.py
subgraph_query_to_csv/graphql/: projects.gql  retirements.gql  tco2Tokens.gql
tests/: test_subgraph_query_to_csv.py
